--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
-    "axios": "^1.2.2",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5",
     "react-router-dom": "^6.4.5",
     "sass": "^1.56.2",
-    "swiper": "^8.4.5",
-    "zod": "^3.20.2"
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
